src/objects/Factura__c.object
<CustomObject>
    <fields>
        <fullName>FAC_CAS_Con_Fichero__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Casilla que indica si la factura tiene un fichero adjunto</description>
        <label>Con Fichero</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FAC_CAS_Factura_de_Gestion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indica si la factura es en concepto de gestión si está a true</description>
        <label>Factura de Gestión</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FAC_CAS_IndicadorPagoFranquicia__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Representa si en la factura aplica Franquicia</description>
        <label>Indicador Pago Franquicia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FAC_DAT_FechaFactura__c</fullName>
        <description>Fecha de expedición de la factura</description>
        <label>Fecha de Factura</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FAC_DIV_ImporteFactura__c</fullName>
        <description>Importe de la factura con Base imponible</description>
        <label>Importe de factura</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FAC_DIV_ImporteFranquicia__c</fullName>
        <label>Importe Franquicia</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FAC_DIV_Importe_Pago__c</fullName>
        <description>Importe del pago informado por el Facturador</description>
        <label>Importe Pago</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FAC_DIV_RetencionPago__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Valor de la Retención del Pago (importe retenido) informada por el Facturador.</description>
        <label>Retencion Pago</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FAC_LKP_Caso__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Id del caso asociado a la factura</description>
        <label>Id Intervención</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Facturas</relationshipLabel>
        <relationshipName>Facturas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FAC_LKP_Cuenta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identificador de la cuenta asociada a la factura</description>
        <label>Id Cuenta</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Facturas</relationshipLabel>
        <relationshipName>Facturas_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FAC_LKP_WorkOrkder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Id de la orden de trabajo asociada a la factura.</description>
        <label>Id Servicio</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Facturas</relationshipLabel>
        <relationshipName>Facturas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FAC_NUM_Ano_Pago__c</fullName>
        <description>Año de emisión de la factura</description>
        <label>Año Pago</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FAC_NUM_Base_Imponible__c</fullName>
        <description>Cantidad sobre la que se calculan los impuestos, lo que se conoce como cómputo de la cuota tributaria.</description>
        <label>Base Imponible</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FAC_NUM_ImporteFinal__c</fullName>
        <description>Importe de la factura con Base imponible</description>
        <label>Importe Final</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FAC_NUM_ImporteIVA__c</fullName>
        <description>Importe añadido por IVA</description>
        <label>ImporteIVA</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FAC_NUM_IndicadorQuincena__c</fullName>
        <description>Quincena de emisión de la factura</description>
        <label>Indicador Quincena</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FAC_NUM_MesPago__c</fullName>
        <description>Mes en el que se realiza el pago informado por el Facturador</description>
        <label>Mes Pago</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FAC_NUM_TotalImportes__c</fullName>
        <description>Importe del pago sin base imponible</description>
        <label>Total Importes</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FAC_POR_PorcentajeIVA__c</fullName>
        <description>Porcentaje de IVA informado por el Facturador</description>
        <label>Porcentaje IVA</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FAC_TXT_Codigo_Capital__c</fullName>
        <label>Codigo Capital</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAC_TXT_Numero_factura__c</fullName>
        <description>Número de factura informado por el Facturador</description>
        <label>Número de factura</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAC_TXT_Tipo_Registro__c</fullName>
        <description>Tipo de Registro de Pagos enviado a la aseguradora.</description>
        <label>Tipo Registro</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Factura</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>es</language>
    </listViews>
    <nameField>
        <label>Nombre de Factura</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Facturas</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>